# slg-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.md  lore-architecture.md  lore-claude-code-prompt.md  package-lock.json  package.json
.github/workflows/: benchmark.yml  ci.yml  release.yml
.vitepress/: config.ts
configs/: cursor_mcp.json  windsurf_mcp.json
crates/lore-cli/: Cargo.toml
crates/lore-cli/src/: main.rs
crates/lore-cli/src/commands/: bisect.rs  blame.rs  cleanup.rs  diff.rs  doctor.rs  index.rs  init.rs  log.rs  mod.rs  reindex.rs  revert_risk.rs  serve.rs  status.rs  sync.rs  why.rs
crates/lore-core/: Cargo.toml
crates/lore-core/src/: config.rs  errors.rs  types.rs
crates/lore-git/: Cargo.toml
crates/lore-git/src/: delta.rs  detector.rs  hooks.rs  ingestion.rs  lib.rs  shell.rs
crates/lore-index/: Cargo.toml
crates/lore-index/src/: bm25.rs  embedder.rs  reranker.rs  search.rs  store.rs
crates/lore-mcp/: Cargo.toml
crates/lore-mcp/src/: auto_init.rs  rate_limiter.rs  server.rs  tools.rs
crates/lore-output/: Cargo.toml
crates/lore-output/src/: budget.rs  json.rs  text.rs  xml.rs
crates/lore-security/: Cargo.toml
crates/lore-security/src/: output_guard.rs  paths.rs  redactor.rs  sanitizer.rs  scanner.rs
crates/lore-security/tests/: test_injection.rs  test_output.rs  test_paths.rs  test_secrets.rs
crates/slg-cli/: Cargo.toml
crates/slg-cli/src/: main.rs
crates/slg-cli/src/commands/: bisect.rs  blame.rs  cleanup.rs  diff.rs  doctor.rs  index.rs  init.rs  log.rs  reindex.rs  revert_risk.rs  serve.rs  status.rs  sync.rs  why.rs
crates/slg-core/: Cargo.toml
crates/slg-core/src/: config.rs  errors.rs
crates/slg-git/: Cargo.toml
crates/slg-git/src/: delta.rs  detector.rs  hooks.rs  ingestion.rs  shell.rs
crates/slg-index/: Cargo.toml
crates/slg-index/src/: bm25.rs  embedder.rs  lib.rs  reranker.rs  search.rs  store.rs
crates/slg-mcp/: Cargo.toml
crates/slg-mcp/src/: auto_init.rs  lib.rs  rate_limiter.rs  server.rs  tools.rs
crates/slg-output/: Cargo.toml
crates/slg-output/src/: budget.rs  json.rs  lib.rs  text.rs  xml.rs
crates/slg-security/: Cargo.toml
crates/slg-security/src/: lib.rs  output_guard.rs  paths.rs  sanitizer.rs  scanner.rs
crates/slg-security/tests/: test_injection.rs  test_output.rs  test_paths.rs  test_secrets.rs
docs/: README.md  architecture.md  commands.md  configuration.md  getting-started.md  mcp.md  security.md  vscode-extension.md
npm/: README.md  package.json
plugin/: .vscodeignore  package-lock.json  package.json  tsconfig.json
plugin/src/: binary.ts  doctor.ts  extension.ts  mcp.ts  statusbar.ts  watcher.ts
scripts/: create_synthetic_repos.py
skill/: SKILL.md
tests/benchmarks/: regression_check.py  runner.py
