[workspace]
members = [
  "crates/lore-core",
  "crates/lore-security",
  "crates/lore-git",
  "crates/lore-index",
  "crates/lore-output",
  "crates/lore-mcp",
  "crates/lore-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lore contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/venki0552/lore-cli"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
