[package]
name = "lore-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "lore"
path = "src/main.rs"

[dependencies]
lore-core = { path = "../lore-core" }
lore-security = { path = "../lore-security" }
lore-git = { path = "../lore-git" }
lore-index = { path = "../lore-index" }
lore-output = { path = "../lore-output" }
lore-mcp = { path = "../lore-mcp" }
clap = { version = "4", features = ["derive", "color", "env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = "3"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
git2 = { version = "0.20", features = ["vendored-libgit2"] }
