[package]
name = "lore-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lore-core = { path = "../lore-core" }
lore-security = { path = "../lore-security" }
git2 = { version = "0.20", features = ["vendored-libgit2"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
dirs = "6"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
