[package]
name = "lore-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lore-core = { path = "../lore-core" }
lore-security = { path = "../lore-security" }
lore-index = { path = "../lore-index" }
serde_json = { workspace = true }
quick-xml = { version = "0.37", features = ["serialize"] }
anyhow = { workspace = true }
chrono = { workspace = true }
