[package]
name = "slg-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "slg"
path = "src/main.rs"

[dependencies]
slg-core = { path = "../slg-core" }
slg-security = { path = "../slg-security" }
slg-git = { path = "../slg-git" }
slg-index = { path = "../slg-index" }
slg-output = { path = "../slg-output" }
slg-mcp = { path = "../slg-mcp" }
clap = { version = "4", features = ["derive", "color", "env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = "3"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
