[package]
name = "slg-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
slg-core = { path = "../slg-core" }
slg-security = { path = "../slg-security" }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
dirs = "6"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
