[package]
name = "slg-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
slg-core = { path = "../slg-core" }
slg-security = { path = "../slg-security" }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite", "blob"] }
fastembed = "4"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
